--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "rainlab/location-plugin": "^2.0",
         "rainlab/forum-plugin": "^2.0",
         "maatwebsite/excel": "^1.1",
-        "shuchkin/simplexlsx": "^1.1"
+        "shuchkin/simplexlsx": "^1.1",
+        "guzzlehttp/guzzle": "^7.9"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5|^9.0"
